# adk-data-agent

./: .env.example  .gitignore  README.md  deploy.ipynb  expose_to_agentspace.sh  pyproject.toml  setup.sh
scripts/: create_bq_agent.py  enable_services.sh  list_agents.py
src/.adk/: session.db
src/agents/: agent.py  ca_api_helper.py  callback.py  config_model.py  config_project.py  data_agent_helper.py  medication_data_agent.py  patient_data_agent.py  pbm_data_agent.py  prompt.py  utils_gcp.py  utils_google_logging.py
src/agents/.adk/: session.db
src/data/medication_inventory/: bigquery_data_context.json  ddl_and_dml.sql  system_instructions.yaml
src/data/patient_records/: bigquery_data_context.json  ddl_and_dml.sql  system_instructions.yaml
src/data/pbm_claims/: bigquery_data_context.json  ddl_and_dml.sql  system_instructions.yaml
